書き込み欄にfocus時に両端の線を非表示に

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -487,6 +487,8 @@ $darktheme-btn-primary-color: #3c83ec;
   }
   textarea:focus{
     border: 1px solid #616161;
+    border-left: none;
+    border-right: none;
     box-shadow: none;
   }
   textarea:disabled{
