--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -44,24 +44,51 @@ a:active{ color: #ff8000; }
 }
 
 /* -------- 環境設定 -------- */
-#preferences-flex-container{
+#preferences-container{
   display: flex;
   flex-direction: column;
-  padding: 15px;
+  height: 100vh;
   background: #efefef;
   color: #333;
-  height: 100vh;
-  #preferences-startup{
+  #preferences-tab-box{
     order: 1;
-    display: flex;
-    flex-direction: column;  
-    #preferences-startup-boards{
-    }
-    #preferences-startup-threads{
-    }  
   }
-  #preferences-theme{
+  #preferences-box{
     order: 2;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    #preferences-startup{
+      order: 1;
+      display: flex;
+      flex-direction: column;  
+      #preferences-startup-boards{
+        order: 1;
+      }
+      #preferences-startup-threads{
+        order: 2;
+      }  
+    }
+    #preferences-theme{
+      order: 2;
+    }
+    .preferences-item{
+      padding: 5px 15px;
+      .preferences-title{
+        font-size: 11px;
+        font-weight: bold;
+      }  
+      input[type="checkbox"]{
+        margin: 0;
+        margin-right: 3px;
+        line-height: 11px;
+        vertical-align: bottom;
+      }
+      .checkbox-label{
+        line-height: 11px;
+        font-size: 11px;
+      }
+    }
   }
   #preferences-btns{
     order: 3;
@@ -72,24 +99,6 @@ a:active{ color: #ff8000; }
       margin: 0px 3px;
     }
   }
-  .preferences-title{
-    font-size: 11px;
-    font-weight: bold;
-  }
-  .preferences-item{
-    padding-left: 2px;
-    input[type="checkbox"]{
-      margin: 0;
-      margin-right: 3px;
-      line-height: 11px;
-      vertical-align: bottom;
-    }
-    .checkbox-label{
-      line-height: 11px;
-      font-size: 11px;
-    }
-  }
-
 }
 
 /* -------- ヘッダー -------- */
@@ -472,7 +481,15 @@ $darktheme-post-name-font-color: #6eca1b;
 $darktheme-link-font-color: #00ccff;
 $darktheme-btn-primary-color: #3c83ec;
 
-#container.dark{
+#container.dark,
+#preferences.dark{
+  background-color: $darktheme-base-color;
+  .preferences-item{
+    color: $darktheme-font-color;
+    input, select, option{
+      color: $font-color;
+    }
+  }
   input[type="text"]{
     background-color: #222;
     border-color: #4c4c4c;
