レス着信音を再生できるようにした

--- a/src/jade/jimaku.jade
+++ b/src/jade/jimaku.jade
@@ -5,4 +5,5 @@ html
     title Jimaku - epcviewer
   body
     div#jimaku
-    script(src="/jimaku_browser.js")
+    audio#se(src="/se.mp3")
+  script(src="/jimaku_browser.js")
