--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -684,12 +684,12 @@ $darktheme-btn-primary-color: #3c83ec;
 
   #board-box>#subject-box::-webkit-scrollbar,
   #thread-box>#post-box::-webkit-scrollbar,
-  #thread-box>#post-box::-webkit-scrollbar,
   #write-form>textarea::-webkit-scrollbar{
     background: darken($darktheme-base-color, 7%);
     border-left: 1px solid lighten($darktheme-base-color, 3%);
   }
   #board-box>#subject-box::-webkit-scrollbar-thumb,
+  #thread-box>#post-box::-webkit-scrollbar-thumb,
   #write-form>textarea::-webkit-scrollbar-thumb{
     background: darken($darktheme-base-color, 14%);
     border-left: 1px solid lighten($darktheme-base-color, 3%);
