Headerのボタンにfocusがあたっている時にafterが最前面にこない問題を修正

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -164,7 +164,8 @@ header{
   min-height: 28px !important;
   .flex-container{
     .btn-group .btn.active,
-    .btn-group .btn:active {
+    .btn-group .btn:active,
+    .btn-group .btn:focus {
       // afterのcontextの文字を前面に出すため
       z-index: 10;
     }
