字幕と書き込み欄で文字が端に行くまで文字を折り返さないようにした

--- a/src/jade/jimaku.jade
+++ b/src/jade/jimaku.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset="UTF-8")
     title Jimaku - epcviewer
-  body
+  body(style="word-break: break-all; white-space: pre-line;")
     div#jimaku
     audio#se(src="/se.mp3")
   script(src="/jimaku_browser.js")
