アンカーを選択できない問題を修正

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -413,6 +413,7 @@ header{
           }
           .post-body-anchor-no{
             display: inline;
+            user-select: text;
           }
         }
       }
