リンクに右クリメニューを追加

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -411,7 +411,8 @@ header{
         }
         .post-body-link{
           @extend .link;
-          user-select: text;
+          user-select: none;
+          cursor: pointer;
         }
         .post-body-anchor{
           @extend .link;
